src/objects/ICG_Environment_Variables__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Object to host all the params needed for ICG project, that can change between environments and do not have to be deployed.</description>
    <label>ONE Source Environment Variables</label>
    <fields>
        <fullName>EXPIRING_VALIDATION_DAYS__c</fullName>
        <description>Days to consider that a Certification for a facility is going to expire. If we write 60, then all the certifications that expire in less than 60 days are considered expiring validations.</description>
        <inlineHelpText>Days to consider that a Certification for a facility is going to expire. If we write 60, then all the certifications that expire in less than 60 days are considered expiring validations.</inlineHelpText>
        <label>Expiring Validation Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Google_Maps_Key_OneSource__c</fullName>
        <description>Google Maps api key</description>
        <inlineHelpText>Google Maps api key</inlineHelpText>
        <label>Google Maps Key of OneSource project</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Integration_Mapping_Version__c</fullName>
        <label>Integration Mapping Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InternalRequestURL__c</fullName>
        <label>InternalRequestURL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Beta_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to true when the One Source community is shown to the public but you want to hide Join Now and Login functions</description>
        <inlineHelpText>Set to true when the One Source community is shown to the public but you want to hide Join Now and Login functions</inlineHelpText>
        <label>Is Beta Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>max_filters_allowed__c</fullName>
        <defaultValue>25</defaultValue>
        <label>max filters allowed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>